<resources>
    <string name="app_name">eRepair</string>

    <!--    Navigation    -->
    <string name="menu_home">Home</string>
    <string name="menu_my_booking">My Bookings</string>
    <string name="menu_info">Info</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>

    <!--    Button  -->
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_update">Update</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_send_request">Send Request</string>
    <string name="btn_book_now">Book Now</string>
    <string name="btn_confirm_book">Confirm Book</string>

    <string name="name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="address_hint">Address</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="skill_hint">Your Skill</string>
    <string name="sign_up_login_hint">Already have an account? Login</string>
    <string name="login_sign_up_hint">Don\'t have an account? Sign Up</string>

    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>

    <string name="problem_hint">Mention Your Problem</string>
    <string name="date_hint">Pick Preferred Date</string>
    <string name="time_hint">Choose Preferred Time</string>
    <string name="location_hint">Your Location</string>


    <string name="time0608">06 – 08 AM</string>
    <string name="time0810">08 – 10 AM</string>
    <string name="time1012">10 – 12 AM</string>
    <string name="time1202">12 – 02 PM</string>
    <string name="time0204">02 – 04 PM</string>
    <string name="time0406">04 – 06 PM</string>


    <!--    Info    -->
    <string name="become_professional">Become a Professional</string>
    <string name="about">About eRepair</string>
    <string name="contact_info">Contact Info</string>
    <string name="version">Version 1.0.0</string>
    <string name="request_title">Fill this form and send your request</string>

    <!--    contact info-->
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_text">Get help and support. Get in touch with us.</string>
    <string name="email_">info@erepair.com</string>
    <string name="phone_">01\-441258</string>
    <string name="address_">
        Koteshwor 32, Kathnamdu \nBagmati, Nepal
    </string>


</resources>
